--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <!-- Moment js CDN -->
   <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
-  <!--link rel="stylesheet" type="text/css" href="assets/css/style.css"-->
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700" rel="stylesheet">
+
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 
@@ -30,79 +32,72 @@
     <br>
 
     <!-- Jumbotron Title -->
-    <div class="jumbotron header">
+    <div class="jumbotron">
       <h1 class="text-center">Your Up-To-Date Train Schedule</h1>
       <h3 class="text-center">Be on time. Everytime.</h3>
     </div>
+ 
 
-    <!-- Train schedule table -->
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Current Train Schedule</h3>
-          </div>
-          <div class="panel-body">
-            <table class="table-striped">
-              <thead>
-                <tr>
-                  <!-- The scope attribute specifies that this is a header for a column -->
-                  <th scope="col">Train Name</th>
-                  <th scope="col">Destination</th>
-                  <th scope="col">First Train</th>
-                  <th scope="col">Frequency (min)</th>
-                  <th scope="col">Next Arrival</th>
-                  <th scope="col">Minutes Away</th>
-                </tr>
-              </thead>
-              <tbody>
-                <!-- <tr>
-                  <td>Polar Express</td>
-                  <td>North Pole</td>
-                  <td>1030</td>
-                  <td>30</td>
-                  <td>1100</td>
-                  <td>21</td>
-                </tr> -->
-                <!-- Insert train schedule rows here -->
-              </tbody>
-            </table>
-          </div>
+  <!-- Train schedule table -->
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title">Current Train Schedule</h3>
+        </div>
+        <div class="panel-body">
+          <table class="table-striped">
+            <thead>
+              <tr>
+                <!-- The scope attribute specifies that this is a header for a column -->
+                <th>Train Name</th>
+                <th>Destination</th>
+                <th>First Train</th>
+                <th>Frequency (min)</th>
+                <th>Next Arrival</th>
+                <th>Minutes Away</th>
+              </tr>
+            </thead>
+            <tbody>
+              <!-- Insert train schedule rows here -->
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- Add Train Section -->
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Add Train</h3>
-          </div>
-          <div class="panel-body">
-            <form>
-              <div class="form-group">
-                <label for="train-name">Train Name</label>
-                <input class="form-control" id="train-name" type="text">
-              </div>
-              <div class="form-group">
-                <label for="destination">Destination</label>
-                <input class="form-control" id="destination" type="text">
-              </div>
-              <div class="form-group">
-                <label for="first-train">First Train Time (HH:mm - miliatary time)</label>
-                <input class="form-control" id="first-train" type="text">
-              </div>
-              <div class="form-group">
-                <label for="frequency">Frequency (min)</label>
-                <input class="form-control" id="frequency" type="text">
-              </div>
-              <button class="btn btn-primary" id="add-train" type="submit">Add Train</button>
-            </form>
-          </div>
+  <!-- Add Train Section -->
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title">Add Train</h3>
+        </div>
+        <div class="panel-body">
+          <form>
+            <div class="form-group">
+              <label for="train-name">Train Name</label>
+              <input class="form-control" id="train-name" type="text">
+            </div>
+            <div class="form-group">
+              <label for="destination">Destination</label>
+              <input class="form-control" id="destination" type="text">
+            </div>
+            <div class="form-group">
+              <label for="first-train">First Train Time (HH:mm - miliatary time)</label>
+              <input class="form-control" id="first-train" type="text">
+            </div>
+            <div class="form-group">
+              <label for="frequency">Frequency (min)</label>
+              <input class="form-control" id="frequency" type="text">
+            </div>
+            <button class="btn btn-primary" id="add-train" type="submit">Add Train</button>
+          </form>
         </div>
       </div>
     </div>
+  </div>
 
 
   </div>
