--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <!-- Train schedule table -->
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-md-12">
       <div class="panel panel-primary">
         <div class="panel-heading">
           <h3 class="panel-title">Current Train Schedule</h3>
@@ -69,7 +69,7 @@
 
   <!-- Add Train Section -->
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-md-12">
       <div class="panel panel-primary">
         <div class="panel-heading">
           <h3 class="panel-title">Add Train</h3>
